# map_area_filter

./: .gitignore  CMakeLists.txt  README.md  README_ja.md  area_map_filter.csv  package.xml
config/: area_map_filter.csv  map_area_filter.param.yaml  obstacle_removal_area_filter.param.yaml
include/: basefilter.hpp  csv.hpp  map_area_filter_contents.hpp  obstacle_removal_area_filter.hpp
launch/: map_area_filter.launch.xml  obstacle_removal_area_filter.launch.xml
src/: basefilter.cpp  map_area_filter_contents.cpp  map_area_filter_exec.cpp  obstacle_removal_area_filter.cpp
